statum-macros/tests/ui/invalid_transition_plain_struct_machine_name.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `machine`
  --> tests/ui/invalid_transition_plain_struct_machine_name.rs:23:1
   |
23 | #[transition]
   | ^^^^^^^^^^^^^ use of unresolved module or unlinked crate `machine`
   |
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot find macro `__statum_resolve_machine_transition_target` in this scope
  --> tests/ui/invalid_transition_plain_struct_machine_name.rs:23:1
   |
23 | #[transition]
   | ^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `machine`
  --> tests/ui/invalid_transition_plain_struct_machine_name.rs:23:1
   |
23 | #[transition]
   | ^^^^^^^^^^^^^ use of unresolved module or unlinked crate `machine`
   |
   = help: if you wanted to use a crate named `machine`, use `cargo add machine` to add it to your `Cargo.toml`
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `machine`
  --> tests/ui/invalid_transition_plain_struct_machine_name.rs:23:1
   |
23 | #[transition]
   | ^^^^^^^^^^^^^ use of unresolved module or unlinked crate `machine`
   |
   = help: if you wanted to use a crate named `machine`, use `cargo add machine` to add it to your `Cargo.toml`
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)
help: a struct with a similar name exists
   |
23 - #[transition]
23 + Machine
   |
